Fixed text overflow in idea details

--- a/src/pages/idea/Idea.module.scss
+++ b/src/pages/idea/Idea.module.scss
@@ -117,6 +117,7 @@
         font-size: 1.875rem;
         font-family: 'tex-bold';
         color: var(--heading-color);
+        overflow-wrap: break-word;
 
         @media screen and (max-width: 768px) {
             font-size: 0.875rem;
@@ -154,6 +155,7 @@
         .details {
             font-size: 1.625rem;
             letter-spacing: 0.031rem;
+            overflow-wrap: break-word;
 
             @media screen and (max-width: 768px) {
                 font-size: 0.5rem;
